<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_selectroom"
        android:name="com.example.temperature_humidity.ui.registerroom.SelectRoomFragment"
        android:label="@string/title_registerroom"
        tools:layout="@layout/fragment_selectroom"/>

    <fragment
        android:id="@+id/navigation_registerroom"
        android:name="com.example.temperature_humidity.ui.registerroom.RegisterRoomFragment"
        android:label="@string/title_registerroom"
        tools:layout="@layout/fragment_registerroom"
        >
        <action
            android:id="@+id/to_select_room"
            app:destination="@id/navigation_selectroom" />
    </fragment>


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.temperature_humidity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/to_register_room"
            app:destination="@id/navigation_registerroom"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.temperature_humidity.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/profile_to_editprofile"
            app:destination="@id/navigation_editprofile"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.temperature_humidity.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_editprofile"
        android:name="com.example.temperature_humidity.ui.profile.EditProfileFragment"
        android:label="@string/title_editprofile"
        tools:layout="@layout/fragment_editprofile">
        <action
            android:id="@+id/editprofile_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>


</navigation>