<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_nav"
    app:startDestination="@id/homeAdminFragment">

    <fragment
        android:id="@+id/homeAdminFragment"
        android:name="com.example.temperature_humidity.ui.home.HomeAdminFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_admin" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.temperature_humidity.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.example.temperature_humidity.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>