<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_nav"
    app:startDestination="@id/navigation_home_admin">


    <activity
        android:id="@+id/navigation_login_admin"
        android:name="com.example.temperature_humidity.LoginActivity"
        tools:layout="@layout/activity_login"
        />

    <fragment
        android:id="@+id/navigation_home_admin"
        android:name="com.example.temperature_humidity.ui.home.HomeAdminFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_admin" >
        <action
            android:id="@+id/to_log_in"
            app:destination="@id/navigation_login_admin"
            />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile_admin"
        android:name="com.example.temperature_humidity.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/profile_to_editprofile"
            app:destination="@id/navigation_editprofile_admin"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_notifications_admin"
        android:name="com.example.temperature_humidity.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_editprofile_admin"
        android:name="com.example.temperature_humidity.ui.profile.EditProfileFragment"
        android:label="@string/title_editprofile"
        tools:layout="@layout/fragment_editprofile">
        <action
            android:id="@+id/editprofile_to_profile"
            app:destination="@id/navigation_profile_admin" />
    </fragment>

</navigation>