<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.manageaccounts.AddAccountFragment" >

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText

            android:maxLength="30"
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_AddAccountName" />

        <EditText
            android:maxLength="20"
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_AddAccountPassword"
            android:inputType="textPassword"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/edtRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập lại mật khẩu..."/>
        <EditText
            android:id="@+id/edtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập ID..."/>
        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập họ và tên..."/>
        <EditText
            android:inputType="number"
            android:id="@+id/edtBornYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập năm sinh..."/>

    </LinearLayout>

    <LinearLayout
        android:gravity="right"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cbIsAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_isAdmin"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnConfirmAddAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ConfirmAddAccount"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_AddAccountIsAdmin" />

</LinearLayout>